--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </nav>
             <div class="card">
                 <p>товаров:<span>0</span></p>
-                <p>на сумму:<span>&nbsp 0,00 грн.</span></p>
+                <p>на сумму:&nbsp<span>&nbsp 0,00 грн.</span></p>
             </div>
         </div>
         <div class="search-panel clearfix">
@@ -142,7 +142,7 @@
                             <option value="">3</option>
                             </select>
                         </div>
-                        <div class="r1-row">
+                        <div class="r1-row r3-row">
                             <label for="#" >Диаметр <span>расположения крепёжных отверстий:</span></label>
                             <select id="">
                             <option value="">12</option>
@@ -275,7 +275,7 @@
                 </figure>            
             </main>
             <aside class="right-sidebar">
-                <h1>КАТАЛОГ ПРОДУКЦИИ:</h1>
+                <h1>БРЕНДЫ:</h1>
                 <form action="/">
                 <ul>
                     <li><span>ШИНЫ</span>
@@ -297,14 +297,14 @@
                 </form>
             </aside>
             <div class="brands">
-                <img src="img/toyo.png" alt="">
-                <img src="img/bridge.png" alt="">
-                <img src="img/continental.png" alt="">
-                <img src="img/dooper.png" alt="">
-                <img src="img/avon.png" alt="">
-                <img src="img/tire.png" alt="">
-                <img src="img/pirelli.png" alt="">
-                <img src="img/dunlop.png" alt="">
+                <a href="#" id="toyo"></a>
+                <a href="#" id="bridge"></a>
+                <a href="#" id="continental"></a>
+                <a href="#" id="dooper"></a>
+                <a href="#" id="avon"></a>
+                <a href="#" id="tire"></a>
+                <a href="#" id="pirelli"></a>
+                <a href="#" id="dunlop"></a>                
             </div>
         </div>
         <footer>
