--- a/index.html
+++ b/index.html
@@ -297,14 +297,14 @@
                 </form>
             </aside>
             <div class="brands">
-                <a href="#" id="toyo"></a>
-                <a href="#" id="bridge"></a>
-                <a href="#" id="continental"></a>
-                <a href="#" id="dooper"></a>
-                <a href="#" id="avon"></a>
-                <a href="#" id="tire"></a>
-                <a href="#" id="pirelli"></a>
-                <a href="#" id="dunlop"></a>                
+                <img src="img/toyo.png" alt="">
+                <img src="img/bridge.png" alt="">
+                <img src="img/continental.png" alt="">
+                <img src="img/dooper.png" alt="">
+                <img src="img/avon.png" alt="">
+                <img src="img/tire.png" alt="">
+                <img src="img/pirelli.png" alt="">
+                <img src="img/dunlop.png " alt="">                               
             </div>
         </div>
         <footer>
